<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WelcomeActivity" >

    <TextView
        android:id="@+id/connect_to_dropbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical ="true"
        android:layout_centerHorizontal ="true"
        android:textSize="18sp"
        android:text="@string/connect_to_dropbox" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal ="true"        
		android:layout_above="@id/connect_to_dropbox"
        android:textSize="64sp"
        android:text="@string/welcome" />
    
      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below ="@id/connect_to_dropbox"
        android:layout_marginTop="32sp"
        android:layout_centerHorizontal ="true"      
        android:text="@string/linkToDropbox" 
        android:onClick="linkToDropbox"/>

</RelativeLayout>
