<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView 
        android:id="@+id/totalLoggedPomodoros"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        />
      <EditText android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal ="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150sp"
        android:textAlignment="center"
        android:hint="@string/edit_message" />
  
       <Button
           android:id="@+id/startCounter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below ="@id/edit_message"
        android:layout_marginTop="16sp"
        android:layout_centerHorizontal ="true"      
        android:text="@string/button_send" 
        android:onClick="startCounter"/>
       
		<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below ="@id/startCounter_button"
        android:layout_marginTop="16sp"
        android:layout_centerHorizontal ="true"      
        android:text="@string/button_blitz" 
        android:onClick="startBlitzCounter"/>
       
      
</RelativeLayout>